src/test/ui/associated-const/issue-63496.stderr
error[E0283]: type annotations needed: cannot resolve `_: A`
  --> $DIR/issue-63496.rs:4:21
   |
LL |     const C: usize;
   |     --------------- required by `A::C`
LL | 
LL |     fn f() -> ([u8; A::C], [u8; A::C]);
   |                     ^^^^

error[E0283]: type annotations needed: cannot resolve `_: A`
  --> $DIR/issue-63496.rs:4:33
   |
LL |     const C: usize;
   |     --------------- required by `A::C`
LL | 
LL |     fn f() -> ([u8; A::C], [u8; A::C]);
   |                                 ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.
